--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>rais's portfolio</title>
+</head>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<body>
+<h1>Rais's portfolio</h1>
+<h2>I am web developer</h2>
+<hr>
+<h3><a href="./public/movie.html">Movie ranking project</a></h3>
+<img src="./assets/images/movie.png" height="200" width="200">
+<h3><a href="./public/birthday.html">Birthday Invite Project</a></h3>
+<img src="./assets/images/birthday.png" height="200" width="200">
+<br>
+<a href="./public/about.html">About me</a>
+<a href="./public/contact.html">Contact me </a>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+</body>
+</html>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
